--- a/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.html
+++ b/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.html
@@ -3,7 +3,7 @@
   <app-navbar></app-navbar>
 
   <!-- Right Container -->
-  <div class="card-container right-container">
+  <div class="right-container">
 
      <!--instructions for this stage-->
     <div class="card-container case-study-instructions text-center">
