ALL EYE TEST STYLING, improved styling

--- a/frontend/src/app/components/pages/eye-tests/pupil-reflexes-test/pupil-reflexes-test.component.html
+++ b/frontend/src/app/components/pages/eye-tests/pupil-reflexes-test/pupil-reflexes-test.component.html
@@ -1,11 +1,8 @@
 <div class="full-container">
+  <app-navbar></app-navbar>
   <div class="parent-container">
-    <!--navbar partial-->
-    <div class="d-flex justify-content-left text-center">
-      <app-navbar></app-navbar>
-    </div>
     <!--Pupil reflexes test-->
-    <div class="card-container eye-movements-container">
+    <div class="eye-movements-container">
       <h1 class="card-container title">Pupil Reflexes Test</h1>
       <!--Instructions-->
       <div class="card-container case-study-instructions">
