--- a/frontend/src/app/components/pages/eye-tests/eye-movements-test/eye-movements-test.component.css
+++ b/frontend/src/app/components/pages/eye-tests/eye-movements-test/eye-movements-test.component.css
@@ -1,11 +1,47 @@
- /* Parent Container allows for a row layout */
- .parent-container {
+
+.full-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh; /* Taking up full viewport height */
+  background-color: #f5f5f5; /* light background color for contrast */
+}
+.parent-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  
+  width: 95%; /* Keeping some margin on the sides for breathing room */
+  max-width: 1200px; /* Max width to avoid too wide layouts on large screens */
 }
 
+
+.app-navbar {
+  width: 25%;
+  background: linear-gradient(to right, #9c88ff, #8e44ad);
+  padding: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 10px; /* Consistent rounding */
+ 
+}
+
+.right-container {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin-right: 5%; /* As from template */
+}
+
+.card-container {
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  margin: 10px;
+  padding: 20px;
+  color: #9c88ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
 /* Navbar Styles */
 .app-navbar {
   width: 25%; /* Adjust width according to your needs */
@@ -42,18 +78,3 @@
   align-items: center;
   height: 100%;
 }
-
-.card-container {
-  background-color: rgb(238, 234, 234);
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
-  border-radius: 10px;
-  margin: 20px;
-  padding: 20px;
-  color: #9c88ff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 70%;
-}
-
